--- a/webroot-dev/index.html
+++ b/webroot-dev/index.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
-<meta charset="UTF-8">
+<!doctype html>
+<meta charset="utf-8">
 <div id="demo"></div>
 
-<script src="coolie.js"
+<script src="/node_modules/coolie.js/coolie.js"
         coolie
-        data-config="coolie-config.js"
+        data-config="/coolie-config.js"
         data-main="index.js"></script>
