--- a/webroot-pro/index.html
+++ b/webroot-pro/index.html
@@ -1,2 +1,2 @@
-<!DOCTYPE html><meta charset="UTF-8"><div id="demo"></div> <script src="/static/js/4199dbc923054982882ff5afba82bdd4.js" data-config="~/static/js/b6122a2a4a1fbcd62c3c994106ca2a5d.js" data-main="9a15f3baac85a8227af5a0e3a2a1a230.js"></script>
-<!--coolie build-->
+<!doctype html><meta charset="utf-8"><div id="demo"></div> <script src="/static/js/0996319be2c4f9517575b54dcc4af897.js" data-config="/static/js/334e1ea3301b33071eb3c5c1a510fd2d.js" data-main="664c0ade7b31b0bafe89a6fe8685b2e1.js"></script>
+<!--coolie built-->
